added links and added picture and changed colors

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     </nav>
     <div id="about">
         <h2><span class="font-primary">A</span>bout</h2>
-        <img src="img/sample-woman.jpg">
+        <img src="img/airel-img.JPG">
         <div class="name">Airelann Sopha</div>
         <div class="vocation">Web Application Developer</div>
         <div class="skills">HTML / CSS / Javascript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker(Basics)</div>
         <p>
-            An SPA 
+            I am a problom solver with exallent communication skills and a fast learner.  
         </p>
         <div class="email">Airelsopha12@gmail.com</div>
         <div class="icons">
-            <a href="#"><i class="bi bi-github"></i></a>
-            <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
+            <a href="https://github.com/airelsopha"><i class="bi bi-github"></i></a>
+            <a href="https://www.linkedin.com/in/airelann-sopha-25b2a8153"><i class="bi bi-linkedin ms-3"></i></a>
         </div>
     </div>
     
